--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>HTML, CSS and SASS Boilerplate</title>
+    
     <meta
       name="description"
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#ae4af9" media="(prefers-color-scheme: light)" content="cyan"/>
   </head>
   <body>
     <div class="main">
